syntax = "proto3";

service UserService {
    rpc getUserDetails(User) returns (UserRespone) {}
}

message User {
    string userId = 1;
}

message Folder {
    string _id = 1;
    string folderId = 2;
    string folderName = 3;
}
message File {
    string _id = 1;
    string fileId = 2;
    string content = 3;
}

message UserRespone {
    string userId = 1;
    string name = 2;
    repeated Folder folders = 3;
    repeated File files = 4;
}
